update (Ideen von Tom)

--- a/anlagen/tabellen/quellenverweise.tex
+++ b/anlagen/tabellen/quellenverweise.tex
@@ -10,9 +10,11 @@
         \texttt{\textbackslash autoref\{sec:querverweise\}}                          & \autoref{sec:querverweise}                          \\
         \texttt{\textbackslash nameref\{sec:querverweise\}}                          & \nameref{sec:querverweise}                          \\
         \texttt{\textbackslash hyperref[sec:querverweise]\{siehe bei Querverweise\}} & \hyperref[sec:querverweise]{siehe bei Querverweise} \\
-        \texttt{\textbackslash href\{URL\}\{Text\}}                                  & \href{https://www.google.de}{Google}                \\
+        \texttt{\textbackslash href\{https://www.google.de\}\{Google\}}              & \href{https://www.google.de}{Google}                \\
+        \midrule
+        \texttt{\textbackslash label\{sec:querverweise\}}                            & \multicolumn{1}{c}{-}                               \\
         \bottomrule
     \end{tabular}
-    \caption{Übersicht über verschiedene Referenzbefehle}
+    \caption{Übersicht über verschiedene Referenz- und Label-Befehle}
     \label{tab:querverweise}
 \end{table}
