--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -8,8 +8,7 @@
         \vspace{1cm}  % Abstand nach dem Logo
 
         % Titel und Untertitel
-        {\Huge \textbf{\LaTeX{} Anleitung}} \\[0.5cm]
-        {\Large \textbf{(kurz für Lamport TeX)}} \\[1.5cm]
+        {\Huge \textbf{\LaTeX{} Anleitung}} \\[1.5cm]
 
         % Horizontale Linie für Trennung 
         \rule{12cm}{0.5pt} \\[1.5cm]  % 12cm lange, 0.5pt dicke Linie
@@ -19,13 +18,18 @@
         % \textbf{\Large Betreuer:} \Large Dr. Beispiel \\[0.5cm]
         \textbf{\Large Datum:} {\Large \today} \\[3cm]
 
-        % --- Universität / Fakultät
+        \vfill
+
         {\large \LaTeX{} ist ein Textsatzsystem, das speziell für wissenschaftliche Arbeiten entwickelt wurde.
-        Auf den folgenden Seiten werden einige nützliche Tipps und Tricks vorgestellt, die die Arbeit mit \LaTeX{} vereinfachen sollen.}
+            Auf den folgenden Seiten finden Sie einige Informationen, die Ihnen die Arbeit mit \LaTeX{} erleichtern sollen.} \\[3cm]
 
         \vfill
 
-        {\large Die Inhalte sind ausschließlich für den privaten Gebrauch bestimmt und dürfen nicht weiterverbreitet oder vervielfältigt werden.} \\[1cm]
+        {\large Ich danke Tom Arlt, der mir die Grundlagen von \LaTeX{} beigebracht hat.}
+
+        \vfill
+
+        {\large Die Inhalte sind ausschließlich für den privaten Gebrauch bestimmt und dürfen nicht weiterverbreitet oder vervielfältigt werden.}
 
         \vfill  % Füllt den restlichen Platz, um den Text in der Mitte zu halten
     \end{center}
