--- a/anlagen/tabellen/querverweise.tex
+++ b/anlagen/tabellen/querverweise.tex
@@ -10,6 +10,7 @@
         \texttt{\textbackslash autoref\{sec:querverweise\}}                          & \autoref{sec:querverweise}                          \\
         \texttt{\textbackslash nameref\{sec:querverweise\}}                          & \nameref{sec:querverweise}                          \\
         \texttt{\textbackslash hyperref[sec:querverweise]\{siehe bei Querverweise\}} & \hyperref[sec:querverweise]{siehe bei Querverweise} \\
+        \texttt{\textbackslash url\{https://www.google.de\}}                         & \url{https://www.google.de}                         \\
         \texttt{\textbackslash href\{https://www.google.de\}\{Google\}}              & \href{https://www.google.de}{Google}                \\
         \midrule
         \texttt{\textbackslash label\{sec:querverweise\}}                            & \multicolumn{1}{c}{-}                               \\
