--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -248,7 +248,7 @@ In \LaTeX{} gibt es viele mathematische Rechenoperatoren und Symbole, die mit fo
 
 \input{anlagen/tabellen/mathematische_symbole.tex}
 
-Darüber hinaus gibt es noch viele weitere mathematische Symbole, die in visual-studio-code einfach über die \LaTeX{}-Erweiterung eingefügt werden können.
+Darüber hinaus gibt es noch viele weitere mathematische Symbole, die in Visual Studio Code einfach über die \LaTeX{}-Erweiterung eingefügt werden können.
 
 \subsubsection{Matrizen}
 Matrizen können in \LaTeX{} mit der \textbf{\texttt{bmatrix}}-Umgebung erstellt werden. Die Spalten werden durch \textbf{\texttt{\&}} und die Zeilen durch \textbf{\texttt{\textbackslash\textbackslash}} getrennt.
