--- a/kapitel/uebersicht.tex
+++ b/kapitel/uebersicht.tex
@@ -1,3 +1,4 @@
+\input{kapitel/grundlagen.tex}
 \input{kapitel/erste_schritte.tex}
 \input{kapitel/wichtige_befehle.tex}
 \input{kapitel/dokumentenelemente.tex}
