--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -20,8 +20,7 @@
 
         \vfill
 
-        {\large \LaTeX{} ist ein Textsatzsystem, das speziell für wissenschaftliche Arbeiten entwickelt wurde.
-            Auf den folgenden Seiten finden Sie einige Informationen, die Ihnen die Arbeit mit \LaTeX{} erleichtern sollen.} \\[3cm]
+        {\Large Mit \LaTeX{} können Sie professionell formatierte wissenschaftliche Dokumente erstellen. Diese Anleitung hilft Ihnen, die grundlegenden Funktionen von \LaTeX{} zu verstehen und effizient zu nutzen.} \\[3cm]
 
         \vfill
 
