--- a/kapitel/grundlagen.tex
+++ b/kapitel/grundlagen.tex
@@ -22,8 +22,35 @@ Im folgenden werden zwei Varianten zur Verwendung von \LaTeX{} vorgestellt:
 \subsubsection{Visual Studio Code mit TeX Live}
 \label{sec:visual_studio_code_mit_tex_live}
 Visual Studio Code ist ein kostenloser, quelloffener Code-Editor von Microsoft, der viele Funktionen für die Entwicklung von Software bietet. Mit der Erweiterung \texttt{LaTeX Workshop} kann Visual Studio Code auch zum Erstellen von \LaTeX{}-Dokumenten verwendet werden. Die Software kann \href{https://code.visualstudio.com/Download}{hier} beim Hersteller heruntergeladen werden.
-Die Erweiterung \texttt{LaTeX Workshop} kann über den \texttt{Extensions}-Tab in Visual Studio Code installiert werden.
 
+Die Erweiterung \texttt{LaTeX Workshop} kann über den \texttt{Extensions}-Tab in Visual Studio Code installiert werden.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{anlagen/bilder/Latex_Workshop_Ext.pdf}
+    \caption{Erweiterung \texttt{LaTeX Workshop}}
+    \label{fig:visual_studio_code_latex_workshop}
+\end{figure}
+
+Tex Live .....
+später in VSC einbinden
+
+
+
+
+
+
+
+
+
+
+
+
+
+ggf. latexindent
+
+
+\subsubsection{Overleaf}
+\label{sec:overleaf}
 
 
 
