--- a/kapitel/grundlagen.tex
+++ b/kapitel/grundlagen.tex
@@ -43,12 +43,12 @@ Nun muss geprüft werden, ob der Dateipfade zu der \LaTeX{}-Distribution \texttt
 Dazu kann ein einfaches \LaTeX{}-Dokument erstellt werden, das den folgenden Code enthält:
 
 \begin{minipage}{0.5\textwidth}
-    \begin{lstlisting}[language=TeX]
+    \begin{lstlisting}[language=TeX, emph={documentclass, begin}, emphstyle={\color{blue}}]
 \documentclass{article}
 \begin{document}
     Hello, World!
 \end{document}
-\end{lstlisting}
+    \end{lstlisting}
 \end{minipage}
 \hfill
 \parbox[b]{0.45\textwidth}{Wenn das Dokument ohne Fehler kompiliert werden kann, ist der Pfad korrekt hinterlegt.}
@@ -60,16 +60,10 @@ Zusätzlich ist die Visual Studio Code Erweiterung \texttt{latexindent} empfehle
 
 \subsubsection{Overleaf}
 \label{sec:overleaf}
-Ein weiteres Tool zur Erstellung von \LaTeX{}-Dokumenten ist \texttt{Overleaf}. Dies ist ein Online-\LaTeX{}-Editor, der es ermöglicht, \LaTeX{}-Dokumente direkt im Browser zu erstellen und zu bearbeiten. Der Vorteil von \texttt{Overleaf} ist, dass keine Installation einer \LaTeX{}-Distribution notwendig ist und die Dokumente online gespeichert werden. ...
+Ein weiteres Tool zur Erstellung von \LaTeX{}-Dokumenten ist \texttt{Overleaf}. Dies ist ein Online-\LaTeX{}-Editor, der es ermöglicht, \LaTeX{}-Dokumente direkt im Browser zu erstellen und zu bearbeiten. Der Vorteil von \texttt{Overleaf} ist, dass keine Installation einer \LaTeX{}-Distribution notwendig ist und die Dokumente online gespeichert werden.
 
-Kostenfreie Variante ...
+\texttt{Overleaf} kann \href{https://www.overleaf.com}{hier} erreicht werden. Es ist notwendig, sich zu registrieren, um \texttt{Overleaf} verwenden zu können. Es gibt eine kostenfreie Variante, die bereits viele Funktionen zur Verfügung stellt. Für erweiterte Funktionen ist ein kostenpflichtiges Abonnement notwendig.
 
-
-
-
-
-
-
-
+Eine ausführliche Anleitung zur Verwendung von \texttt{Overleaf} ist \href{https://youtu.be/lgiCpA4zzGU?si=xZJ08u8SgERr0tuz}{hier} in Form eines YouTube-Videos verfügbar.
 
 \newpage
