--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -485,7 +485,7 @@ Dabei können folgende Optionen verwendet werden:
 
 Darüber hinaus können Bilder mit dem Befehl \texttt{\textbf{\textbackslash reflectbox\{\textbackslash includegraphics[...]\{Pfad/zum/Bild.png\}\}}} gespiegelt werden.
 
-\subsubsection{Platzierung von Bildern (und anderen Gleitobjekten)}
+\subsubsection{Platzierung von Bildern und anderen Gleitobjekten}
 Die Platzierung von Gleitobjekten kann mit den folgenden Optionen in \textbf{\texttt{\textbackslash begin\{figure\}[...]}} gesteuert werden.
 
 \begin{table}[H]
