--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -52,7 +52,7 @@ Manchmal ist es gewünscht auf einer Seite keine Kopf- und/oder Fußzeile zu hab
 
 \newpage
 
-\subsection{Erstellen des Inhaltsverzeichnisses (und weiterer Verzeichnisse)}
+\subsection{Erstellen des Inhaltsverzeichnisses}
 \label{sec:inhaltsverzeichnis}
 Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} erstellt. Die Tiefe des Inhaltsverzeichnis kann mit dem Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} festgelegt werden. Dabei steht X für die \underbar{maximale Tiefe} des Inhaltsverzeichnisses und kann folgende Werte annehmen:
 
@@ -78,6 +78,7 @@ Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableo
 
 Für die Anwendung dieses Befehls ist darauf zu achten, dass \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} vor \textbf{\texttt{\textbackslash tableofcontents}} platziert werden muss.
 
+\subsubsection{Weitere Verzeichnisse}
 Sollen weitere Verzeichnisse für Abbildungen, Tabellen, etc. erstellt werden, so kann dies mit den Befehlen \textbf{\texttt{\textbackslash listoffigures}}, \textbf{\texttt{\textbackslash listoftables}}, etc. erreicht werden.
 
 Darüber hinaus sind weitere Einstellungen mit den Paketen \textbf{tocloft}, \textbf{titletoc} und \textbf{minitoc} möglich.
