--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -197,7 +197,7 @@ In Berichten werden in der Regel nur die Ebenen \textbf{section} bis \textbf{sub
 \subsubsection*{1.1.1 \hspace{0.15cm} subsubsection}
 
 
-\subsection{Querverweise (Label und Referenzen)}
+\subsection{Querverweise}
 \label{sec:querverweise}
 \LaTeX{} bietet ein automatisches Querverweis-System, welches es ermöglicht, auf Kapitel, Abschnitte, Bilder, Tabellen, Formeln und andere Elemente im Dokument zu verweisen.
 Dafür werden Labels an den gewünschten Stellen im Dokument gesetzt und an anderer Stelle mit Referenzen darauf verwiesen.
@@ -303,7 +303,7 @@ Werte mit Einheiten können entweder mit dem Befehl \textbf{\texttt{\textbacksla
 In der Präambel des Dokuments kann mit \texttt{\textbf{\textbackslash sisetup\{output-decimal-marker = \{,\}\}}} das Dezimaltrennzeichen global auf ein Komma und ggf. mit \textbf{\texttt{\textbackslash sisetup\{group-separator = \{.\}\}}} das Gruppentrennzeichen auf einen Punkt gesetzt werden.
 
 
-\subsection{Eigene Befehle (Makros)}
+\subsection{Eigene Befehle / Makros}
 In latex können eigene Befehle definiert werden, um häufig verwendete Befehle oder Texte zu vereinfachen. Dies kann mit dem Befehl \textbf{\texttt{\textbackslash newcommand\{\textbackslash befehl\}[Anzahl-Argumente]\{Definition\}}} erreicht werden.
 
 Darüber hinaus kann mit \textbf{\texttt{\textbackslash renewcommand\{\textbackslash befehl\}[Anzahl-Argumente]\{Definition\}}} ein bereits existierender Befehl überschrieben werden und mit \newline \textbf{\texttt{\textbackslash providecommand\{\textbackslash befehl\}[Anzahl-Argumente]\{Definition\}}} wird der Befehl nur definiert, wenn er noch nicht existiert.
