--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -199,6 +199,7 @@ Es stehen folgende Stile zur Auswahl (siehe auch: \href{https://www.overleaf.com
   \item \textbf{alpha} – Alphabetische Sortierung nach Autoren, aber mit Kurzreferenzen wie `[Ein05]`.
   \item \textbf{abbrv} – Wie `plain`, aber mit abgekürzten Vornamen und Titeln.
   \item \textbf{apalike} – Ähnlich wie APA-Zitierstil (Autor-Jahr statt Nummerierung).
+  \item \textbf{IEEEtran} - Nummerierte Referenzen in eckigen Klammern, komprimierte Autorennamen und Titel
 \end{itemize}
 
 Anschließend wird die \textbf{\texttt{.bib}}-Datei mit dem Befehl \textbf{\texttt{\textbackslash bibliography\{Pfad/zur/Datei\}}} eingebunden.
