--- a/main.tex
+++ b/main.tex
@@ -116,9 +116,9 @@
 
 % Literaturverzeichnis
 \newpage
-\bibliographystyle{plain}  % Stil des Literaturverzeichnisses
-\bibliography{literatur}   % Verknüpfung mit literatur.bib
-\nocite{*}                 % Alle Einträge aus literatur.bib anzeigen
+\bibliographystyle{IEEEtran}  % Stil des Literaturverzeichnisses
+\bibliography{literatur}      % Verknüpfung mit literatur.bib
+\nocite{*}                    % Alle Einträge aus literatur.bib anzeigen
 \label{sec:literaturverzeichnis}
 
 Die im Literaturverzeichnis aufgeführten Quellen sind reine Beispiele und entsprechen nicht der Realität.
