--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -97,6 +97,7 @@ In \LaTeX{} kann ein Abkürzungsverzeichnis mit Hilfe des Pakets \textbf{acronym
 Abkürzungen werden in der \texttt{\textbf{acronym}}-Umgebung definiert. Dabei wird der Befehl \newline \textbf{\texttt{\textbackslash acro\{Abkürzung\}\{Definition\}}} verwendet.
 Damit die Übersichtlichkeit gewahrt bleibt, werden die Abkürzungen (inklusive \texttt{acronym}-Umgebung) in einer separaten Datei (abkuerzungen.tex) erstellt und in das Hauptdokument (main.tex) eingebunden.
 
+\newpage
 Ein Beispiel für ein Abkürzungsverzeichnis folgt:
 
 \begin{lstlisting}[language={[LaTeX]TeX}]
@@ -145,7 +146,7 @@ Alternativ kann \textbf{biblatex} oder \textbf{natbib} verwendet werden.
 
 \subsubsection{Erstellen einer \textbf{\texttt{.bib}}-Datei}
 Zunächst werden die Literaturangaben in einer \textbf{\texttt{.bib}}-Datei (literatur.bib) gespeichert. Vorzugsweise im gleichen Ordner wie die Hauptdatei.
-Die möglichen \textbf{Eintragstypen} wurden \href{https://www.overleaf.com/learn/latex/Bibliography_management_with_bibtex#Taking_another_look_at_.bib_files}{hier} zusammen geführt.
+Die möglichen \textbf{Eintragstypen} wurden auf folgender Internetseite zusammen geführt \href{https://www.overleaf.com/learn/latex/Bibliography_management_with_bibtex#Taking_another_look_at_.bib_files}{https://www.overleaf.com/learn/latex/Bibliography\_management\_with\_bibtex}.
 
 Es folgt ein Beispiel für eine \textbf{\texttt{literatur.bib}}-Datei:
 
