--- a/kapitel/grundlagen.tex
+++ b/kapitel/grundlagen.tex
@@ -24,9 +24,9 @@ Im folgenden werden zwei Varianten zur Verwendung von \LaTeX{} vorgestellt:
 Visual Studio Code ist bekannt als ein kostenloser, quelloffener Code-Editor, der viele Funktionen für die Entwicklung von Software bietet und mit Versionskontrollsystemen wie Git kompatibel ist. Mit der Erweiterung \texttt{LaTeX Workshop} kann Visual Studio Code auch zum Erstellen von \LaTeX{}-Dokumenten verwendet werden.
 
 
-Damit später in Visual Studio Code \LaTeX{}-Dokumente erstellt und bearbeitet werden können, muss zunächst eine \LaTeX{}-Distribution installiert werden. In diesem Beispiel wird \texttt{TeX Live} verwendet, da es plattformübergreifend verfügbar ist. Der Download von \texttt{TeX Live} kann \href{https://www.tug.org/texlive/}{hier} gestartet werden. Es ist sinnvoll eine Vollständige Installation durchzuführen, um alle benötigten Pakete und Programme zu installieren.
+Damit später in Visual Studio Code \LaTeX{}-Dokumente erstellt und bearbeitet werden können, muss zunächst eine \LaTeX{}-Distribution installiert werden. In diesem Beispiel wird \texttt{TeX Live} verwendet, da es plattformübergreifend verfügbar ist. Der Download von \texttt{TeX Live} kann unter \newline \href{https://www.tug.org/texlive/}{https://www.tug.org/texlive/} gestartet werden. Es ist sinnvoll eine Vollständige Installation durchzuführen, um alle benötigten Pakete und Programme zu installieren.
 
-Visual Studio Code kann \href{https://code.visualstudio.com/Download}{hier} beim Hersteller heruntergeladen werden.
+Visual Studio Code kann beim Hersteller unter folgender URL heruntergeladen werden: \newline \href{https://code.visualstudio.com/Download}{https://code.visualstudio.com/Download}
 
 Die Erweiterung \texttt{LaTeX Workshop} wird über das \texttt{Extensions}-Tab in Visual Studio Code installiert:
 
@@ -37,7 +37,7 @@ Die Erweiterung \texttt{LaTeX Workshop} wird über das \texttt{Extensions}-Tab i
     \label{fig:visual_studio_code_latex_workshop}
 \end{figure}
 
-Sobald \texttt{LaTeX Workshop} installiert ist, erscheint ein \TeX{} Button an der linken Seite des Visual Studio Code Fensters. Mit einem Klick auf den Button wird ein speziell für \LaTeX{}-Dokumente angepasstes Menü geöffnet, das viele Funktionen zur Verfügung stellt, die das Erstellen von \LaTeX{}-Dokumenten erleichtern. Dort ist das Kompilieren des Dokuments, sowie das Anzeigen der PDF-Datei möglich.
+Sobald \texttt{LaTeX Workshop} installiert ist und eine \texttt{.tex}-Datei erstellt ist, erscheint ein \TeX{} Button an der linken Seite des Visual Studio Code Fensters. Mit einem Klick auf den Button wird ein speziell für \LaTeX{}-Dokumente angepasstes Menü geöffnet, das viele Funktionen zur Verfügung stellt, die das Erstellen von \LaTeX{}-Dokumenten erleichtern. Dort ist das Kompilieren des Dokuments, sowie das Anzeigen der PDF-Datei möglich.
 
 Nun muss geprüft werden, ob der Dateipfade zu der \LaTeX{}-Distribution \texttt{TeX Live} in Visual Studio Code korrekt hinterlegt ist.
 Dazu kann ein einfaches \LaTeX{}-Dokument erstellt werden, das den folgenden Code enthält:
@@ -53,16 +53,18 @@ Dazu kann ein einfaches \LaTeX{}-Dokument erstellt werden, das den folgenden Cod
 \hfill
 \parbox[b]{0.45\textwidth}{Wenn das Dokument ohne Fehler kompiliert werden kann, ist der Pfad korrekt hinterlegt.}
 
-Normalerweise wird der Dateipfad automatisch erkannt, wenn \texttt{TeX Live} korrekt installiert ist. Sollte dies nicht der Fall gibt es \href{https://github.com/James-Yu/LaTeX-Workshop/wiki/Install#setting-path-environment-variable}{hier} einige Hilfestellungen.
+Normalerweise wird der Dateipfad automatisch erkannt, wenn \texttt{TeX Live} korrekt installiert ist. Sollte dies nicht der Fall gibt es bei folgender Internetseite einige Hilfestellungen \newline \href{https://github.com/James-Yu/LaTeX-Workshop/wiki/Install#setting-path-environment-variable}{https://github.com/James-Yu/LaTeX-Workshop/wiki/Install\#setting-path-environment-variable}.
 
-Zusätzlich ist die Visual Studio Code Erweiterung \texttt{latexindent} empfehlenswert, um den Code automatisch zu formatieren. Die Erweiterung kann über den \texttt{Extensions}-Tab in Visual Studio Code installiert werden.
+Zusätzlich ist die Visual Studio Code Erweiterung \texttt{latexindent} empfehlenswert, um den Code automatisch zu formatieren. Die Erweiterung kann über den \texttt{Extensions}-Tab in Visual Studio Code installiert und in den Einstellungen unter \texttt{Latex-workshop > Formatting: Latex} auf \texttt{latexindent} gesetzt werden um die Formatierungshilfe zu aktivieren.
+
+Darüber hinaus ist es empfehlenswert in der Kopfzeile den automatischen Zeilenumbruch zu aktivieren. Dies ist mit \texttt{> Toggle Word Wrap} möglich.
 
 
 \subsubsection{Overleaf}
 \label{sec:overleaf}
 Ein weiteres Tool zur Erstellung von \LaTeX{}-Dokumenten ist \texttt{Overleaf}. Dies ist ein Online-\LaTeX{}-Editor, der es ermöglicht, \LaTeX{}-Dokumente direkt im Browser zu erstellen und zu bearbeiten. Der Vorteil von \texttt{Overleaf} ist, dass keine Installation einer \LaTeX{}-Distribution notwendig ist und die Dokumente online gespeichert werden.
 
-\texttt{Overleaf} kann \href{https://www.overleaf.com}{hier} erreicht werden. Es ist notwendig, sich zu registrieren, um \texttt{Overleaf} verwenden zu können. Es gibt eine kostenfreie Variante, die bereits viele Funktionen zur Verfügung stellt. Für erweiterte Funktionen ist ein kostenpflichtiges Abonnement notwendig.
+Die Webseite von \texttt{Overleaf} ist \href{https://www.overleaf.com}{https://www.overleaf.com}. Es ist notwendig, sich zu registrieren, um \texttt{Overleaf} verwenden zu können. Es gibt eine kostenfreie Variante, die bereits viele Funktionen zur Verfügung stellt. Für erweiterte Funktionen ist ein kostenpflichtiges Abonnement notwendig.
 
 Eine ausführliche Anleitung zur Verwendung von \texttt{Overleaf} ist \href{https://youtu.be/lgiCpA4zzGU?si=xZJ08u8SgERr0tuz}{hier} in Form eines YouTube-Videos verfügbar.
 
