--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -180,7 +180,7 @@ Es folgt ein Beispiel für eine \textbf{\texttt{literatur.bib}}-Datei:
   author    = {Overleaf},
   title     = {LaTeX-Wiki},
   year      = {2025},
-  note      = {URL: \url{https://www.overleaf.com/learn/latex} (abgerufen am 10. Marz 2025)}
+  note      = {\MakeUppercase{URL}: \url{https://www.overleaf.com/learn/latex} (abgerufen am 10. Marz 2025)}
 }
 
 @phdthesis{thesis1,
