--- a/literatur.bib
+++ b/literatur.bib
@@ -34,7 +34,7 @@
   author = {Overleaf},
   title  = {LaTeX-Wiki},
   year   = {2025},
-  note   = {URL: \url{https://www.overleaf.com/learn/latex} (abgerufen am 10. März 2025)}
+  note   = {\MakeUppercase{URL}: \url{https://www.overleaf.com/learn/latex} (abgerufen am 10. März 2025)}
 }
 
 @phdthesis{thesis1,
